# aoc2024

./: .gitignore  Cargo.toml
src/: agrid.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  grid.rs  main.rs  multiset.rs  point.rs  rpoly.rs  util.rs  xy.rs
